--- a/xbmc/cores/DSPlayer/Subtitles/libsubs/libsubs.vcproj
+++ b/xbmc/cores/DSPlayer/Subtitles/libsubs/libsubs.vcproj
@@ -52,7 +52,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
-				DisableSpecificWarnings="4996"
+				DisableSpecificWarnings="4996;4204"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
