added: A ugly, but working GUI interface for addons (hope to have a better idea in the future for this) added: Support for channel scans over the VDR VNSI client addon added: Confluence skin for channel scanning inside VNSI addon dir added: Support for channel scanning inside VDR VNSI server plugin (need modified wirbelscan plugin) added: Patch for VDR's wirbelscan plugin to add a service interface for communication with VNSI server fixed: Removed unused addon folders (trunk merge issues)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@29449 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/Makefile.in
+++ b/Makefile.in
@@ -125,6 +125,7 @@ PVR_DIRS=\
 
 LIBADDON_DIRS=\
 	lib/libXBMC_addon \
+	lib/libXBMC_gui \
 	lib/libXBMC_pvr \
 
 CONFLUENCE_MEDIA=skin/Confluence/media
@@ -338,6 +339,7 @@ screensavers: exports
 	$(MAKE) -C xbmc/screensavers/rsxs-0.9/xbmc
 libaddon: exports
 	$(MAKE) -C lib/libXBMC_addon
+	$(MAKE) -C lib/libXBMC_gui
 	$(MAKE) -C lib/libXBMC_pvr
 libpython: dllloader
 	$(MAKE) -C xbmc/lib/libPython
