--- a/xbmc/cores/paplayer/vgmstream/win32/win32.vcproj
+++ b/xbmc/cores/paplayer/vgmstream/win32/win32.vcproj
@@ -66,6 +66,7 @@
 				Name="VCLinkerTool"
 				OutputFile="..\..\..\..\..\system\players\paplayer\vgmstream.dll"
 				LinkIncremental="1"
+				IgnoreDefaultLibraryNames="LIBCMTD"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="win32.pdb"
 				SubSystem="2"
